// Copyright 2024-2025 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.directory.v1;

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1";

import "accrescent/directory/v1/split_download_info.proto";

message AppDownloadInfo {
  // The total download size in bytes for this app or app update.
  optional uint32 download_size = 1;
  // Download info for each individual split APK
  repeated SplitDownloadInfo split_download_info = 2;
}
