syntax = "proto3";

package accrescent.directory.v1;

option java_multiple_files = true;
option java_package = "app.accrescent.directory.v1";

import "accrescent/directory/v1/app_listing.proto";

// Response to requesting an app listing.
message GetAppListingResponse {
  // The listing provided by the API.
  AppListing listing = 1;
}
